<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomTransactionContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet_add_transaction">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <!-- chosen category-->
            <TextView
                android:id="@+id/tv_category_with_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/dining"
                android:textColor="@color/FinalProj_Dark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/amount"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_transaction_amount_tip"
                    android:layout_width="280dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="40dp"
                    android:layout_toRightOf="@id/tv_amount"
                    android:hint="@string/transaction_amount"
                    android:inputType="numberDecimal"
                    tools:ignore="TextContrastCheck" />

            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tv_description"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/description_col"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/et_description_tip"
                    android:layout_width="280dp"
                    android:layout_height="70dp"
                    android:layout_marginStart="15dp"
                    android:layout_toRightOf="@id/tv_description"
                    android:hint="@string/add_a_description"
                    android:inputType="textShortMessage"
                    tools:ignore="TextContrastCheck" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_receipt"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:text="@string/receipt"
                    android:textSize="18sp"
                    android:textStyle="bold" />
                <Button
                    android:id="@+id/btn_view_receipt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/tv_receipt"
                    android:backgroundTint="@color/FinalProj_Primary"
                    android:text="@string/view_the_receipt"
                    android:textColor="@color/FinalProj_Dark" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal">

                <Spinner
                    android:id="@+id/spinner_add_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown"
                    tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/btn_add_receipt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:backgroundTint="@color/FinalProj_Primary"
                    android:drawableLeft="@drawable/ic_add_receipt"
                    android:padding="8dp"
                    android:text="@string/add_receipt"
                    android:textColor="@color/FinalProj_Dark"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/btn_done_add_transaction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:backgroundTint="@color/FinalProj_Primary"
                    android:drawableLeft="@drawable/ic_done_add"
                    android:padding="8dp"
                    android:text="@string/done"
                    android:textColor="@color/FinalProj_Dark"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>