<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/team_name_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/team_15"
        app:layout_constraintBottom_toTopOf="@+id/movie_tv_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/movie_tv_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="movieSearchActivity"
        android:text="@string/movie_tv_search"
        app:layout_constraintBottom_toTopOf="@+id/firebase_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/team_name_text_view" />

    <Button
        android:id="@+id/firebase_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="firebaseLoginActivity"
        android:text="@string/firebase"
        app:layout_constraintBottom_toTopOf="@id/peak_project_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_tv_button" />

    <Button
        android:id="@+id/about_team_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="aboutTeamActivity"
        android:text="@string/about"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transaction_testing_button" />

    <Button
        android:id="@+id/peak_project_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="peakProjectActivity"
        android:text="@string/peak"
        app:layout_constraintBottom_toTopOf="@+id/transaction_testing_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firebase_button"
        app:layout_constraintVertical_chainStyle="spread" />

    <Button
        android:id="@+id/transaction_testing_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="testActivity"
        android:text="Transaction Testing"
        app:layout_constraintBottom_toTopOf="@+id/about_team_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/peak_project_button"
        app:layout_constraintVertical_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>